--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Data partition files
+data/partition/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -113,6 +116,9 @@ ipython_config.py
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
+
+# 
+*.pth
 
 # Celery stuff
 celerybeat-schedule
